// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, dark 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "ec36fc4732b15281d425ef1a4f60c45f86b7e8530678d9cfe6240d9d5dd91fd4",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open CSIDivisionPicker, light 1`] = `
{
  "lines": 289,
  "modalCount": 1,
  "sha256": "27b1f149041c0947fb180b62f103191834511a072c4b32a204a2b86b66109aaf",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, dark 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "700868debcd97ea0e495e9b4767b6e83750f99bb0352dd7f9146a76e5d2d3a47",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open DemoSeedPickerModal, light 1`] = `
{
  "lines": 210,
  "modalCount": 1,
  "sha256": "98d20c0ade2c1ef310b06b8e1453a0849ae1e2b23872665535e37f9745c151d8",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, dark 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "e86508eb19a04ca221548c5d16e7960c6706322afb1a332b3d179836b09e383d",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open FeatureExplainerSheet, light 1`] = `
{
  "lines": 49,
  "modalCount": 1,
  "sha256": "fc7ca33d5bac3abeb36d1d2ec55d6f849d603ec4fbc83dd20f41935978627283",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, dark 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "62f070c89e4df38ade5e2da401f274f1ffc976d436216e2fcc028096eaf00ea6",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open HelpFab, light 1`] = `
{
  "lines": 64,
  "modalCount": 1,
  "sha256": "90bdb258c14142e730ffd0f499d7a326aa446f7e45bd7b800d5bf45011c67a3a",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, dark 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "2864b91fdfbfcce3e80a7d7ef8f0209916b598e1c210a46ae9db31fe3c63c4c8",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open JobSwitcher, light 1`] = `
{
  "lines": 27,
  "modalCount": 1,
  "sha256": "082de57b176be75f84f6092731eabacc7d5e3374fe120f1f6f1f4f1e459aa319",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, dark 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "50a9987cff5b952aab65677fe9c880b2148f436641963aeab7f5ff679ed51643",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open PunchPhotoViewer, light 1`] = `
{
  "lines": 14,
  "modalCount": 1,
  "sha256": "50a9987cff5b952aab65677fe9c880b2148f436641963aeab7f5ff679ed51643",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, dark 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "f0c78ba69443013cbe2c4f68229142f933548dc859274bf113b6ca36b02b3b12",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open QuickUpdateClarifier, light 1`] = `
{
  "lines": 99,
  "modalCount": 1,
  "sha256": "cb9131e7e0deac54f207c3c10096cc677c511035f1e1f222a7107431dfc3b635",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, dark 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "bcfeb088f14ca6706b4bc5ea92870c8b75ccfe6b40429a3bb990d2f7eebca2eb",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open RateProvenanceChip, light 1`] = `
{
  "lines": 61,
  "modalCount": 1,
  "sha256": "0e405fe51429115c5ba4fc9a603bddf84595768805ca8cd6f119054b9cd7a2fe",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, dark 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "8d3e33a23c87a8ee7acb2efc556cda54bc5e055eab313656fb25eb63adbde972",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolbarActions, light 1`] = `
{
  "lines": 20,
  "modalCount": 1,
  "sha256": "d610727a8840f6441e334b4e01413dbaabdd2687b6281f928aebe3ba931cb50e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, dark 1`] = `
{
  "lines": 191,
  "modalCount": 1,
  "sha256": "0285ace44aad86ca9908d1c4e812a99c14d231541422610283938fc40925b4e8",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open ToolsSheet, light 1`] = `
{
  "lines": 191,
  "modalCount": 1,
  "sha256": "74b78429afcbcecc9ef41cebd4cec64ed8065784f4160b2e12652b2543630abb",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, dark 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "c7fb2a09cd2c65b25a23eba8f1f49a02bbf559f253abf616f23bf588f2983481",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch B — each sheet alone, iOS 390, open VoiceCommandModal, light 1`] = `
{
  "lines": 89,
  "modalCount": 1,
  "sha256": "0dda79c48ee653168f79905e1dadc104fbde15d15c7452d2d8f7c6780e31fa9e",
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag building-access 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 45,
      "sha256": "9b4ef9defddcead173c05b0b7f4ba62f4bf0b265d97b9f4624c05c823349ada5",
      "title": "Book a slot",
    },
  ],
  "whole": {
    "lines": 435,
    "sha256": "bfd1b57353d4962c4c39c736ac8da6c38722c06675bb338aab54fc96dd9f7f71",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag company-profile 1`] = `
{
  "modalCount": 7,
  "sheets": [
    {
      "found": true,
      "lines": 180,
      "sha256": "88f84e910e5d59eda68c4602d7d835c567f608bc8c6a1aa0cef33beeb4a0331c",
      "title": "Which state licenses you?",
    },
    {
      "found": true,
      "lines": 38,
      "sha256": "d81e1df5f4d60ca9fc51123c329bfec0b7b28acf5bcc15bc43a99ac904f5d9b9",
      "title": "Draw your signature",
    },
  ],
  "whole": {
    "lines": 719,
    "sha256": "d5a5736b4836d44ce63d2be550c2d81944a14637b2404e2137933dad5adc8391",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag discover/bids 1`] = `
{
  "modalCount": 6,
  "sheets": [
    {
      "found": true,
      "lines": 24,
      "sha256": "da4db05af4e59a3640783e617211258786c8488998e6e0c6b9d161b4882f1316",
      "title": "Sort by",
    },
    {
      "found": true,
      "lines": 39,
      "sha256": "19b4c622bae0a870d0a77a95925d5e5c9077dfa8b4dd1f25690120ebe310204a",
      "title": "Set-aside type",
    },
  ],
  "whole": {
    "lines": 604,
    "sha256": "abdc5d7007c12f62c65341fa9c35c80a090fe1e7395768ef2d645efebc51fbe5",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail (seeded machine) 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 22,
      "sha256": "20195359f6092904081af370efa4eea39c1083152889fe611a28b5e5b799c4a9",
      "title": "Log usage",
    },
  ],
  "whole": {
    "lines": 436,
    "sha256": "ffccfb30074c1edc14f48bf32a9fa83f830405dca173af1a66127da0172fa958",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag equipment-detail 1`] = `
{
  "modalCount": 4,
  "sheets": [
    {
      "found": false,
      "title": "Log usage",
    },
  ],
  "whole": {
    "lines": 315,
    "sha256": "15f8bca5a1a05c07001d57f5daba996028fa293b1c021c4603c4f08da24530f5",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag get-verified 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 169,
      "sha256": "51e6a8fa734fe0ea975472576ae69fbc85b7ef856ccc9cf4dc415e46268973ec",
      "title": "Issuing state",
    },
  ],
  "whole": {
    "lines": 543,
    "sha256": "8cfa4a3dbd5a6977b1ba6028294f2eb33284932eaa32bf8e430f2c7a698cdc54",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag lead-detail 1`] = `
{
  "modalCount": 8,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "2cd0330f66effeed4754e4a5b7b6714b095c111f2f1354597bfc473750e3b12a",
      "title": "Why did this one go cold?",
    },
  ],
  "whole": {
    "lines": 606,
    "sha256": "60568cc86e01219f219aa51feb2c176cdf0ca99f7f22df75f3135d3f2879b43b",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag materials/lumber 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 11,
      "sha256": "6753bf5faa2353efe8815a3bfc391d3c0d1d034ab2ce8808870849beb70ade63",
      "title": "Set price alert",
    },
  ],
  "whole": {
    "lines": 1653,
    "sha256": "e8b19e1980c65c14dd295126a4959a8ce67f61dbc63aaeec2f7140986b6f711d",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag plan-intelligence 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 36,
      "sha256": "78b62dae5ba7feaf7a827f4bdb482b3022f83a9f1e321c2306aa295af3f6fb01",
      "title": "Save room",
    },
  ],
  "whole": {
    "lines": 383,
    "sha256": "e440496fea0dabab9199547c43dfbc29d268b8a975bafeae87b9b30c38b0a9dc",
  },
}
`;

exports[`lane X2 — the phone is unchanged (golden) batch E — each route, iOS 390, populated bag qbo-review 1`] = `
{
  "modalCount": 5,
  "sheets": [
    {
      "found": true,
      "lines": 21,
      "sha256": "ed5a85914d09479887d6584cdeab52771c766d8c5fb4e1c311d37eddb27112e2",
      "title": "Which project is this cost for?",
    },
  ],
  "whole": {
    "lines": 356,
    "sha256": "a666cce8c5aad8300ce907fb14dcfe9ec7b37cc76eac9b7de6240f0b02285736",
  },
}
`;
